Fix para el scroll en mobile (overflow)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1432,4 +1432,5 @@ body, .onepage-wrapper, html {
 
 body.disabled-onepage-scroll, .disabled-onepage-scroll .onepage-wrapper, html {
     position: inherit;
+    overflow: auto;
 }
